<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="app.binar.synrgy.android.finalproject.ui.homenavigation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_portfolio"
        android:name="app.binar.synrgy.android.finalproject.ui.homenavigation.portofolio.PortofolioFragment"
        android:label="@string/portofolio"
        tools:layout="@layout/fragment_portofolio" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="app.binar.synrgy.android.finalproject.ui.homenavigation.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="app.binar.synrgy.android.finalproject.ui.homenavigation.information.InformationFragment"
        android:label="@string/information"
        tools:layout="@layout/fragment_information" />

</navigation>
