<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--  header payment detail  -->
    <LinearLayout
        android:id="@+id/header_payment_detail"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/blue_primary"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="21dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/text_payment_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/page_payment_screen"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/slicing_deadline"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@color/background_detail_pay"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_payment_detail">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/pay_deadline"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/pay_date"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_to_pay"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:background="@color/background_step_by_step"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slicing_deadline">

        <TextView
            android:id="@+id/text_step1"
            android:layout_width="74dp"
            android:layout_height="65dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue_primary"
            android:drawableTop="@drawable/ic_map_atm"
            android:text="@string/text_favor_bank"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="8.6sp" />

        <TextView
            android:id="@+id/text_step2"
            android:layout_width="74dp"
            android:layout_height="65dp"
            android:layout_marginLeft="25dp"
            android:background="@color/blue_primary"
            android:drawableTop="@drawable/ic_baseline_password"
            android:text="@string/text_enter_va"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:textSize="8.6sp" />

        <TextView
            android:id="@+id/text_step3"
            android:layout_width="74dp"
            android:layout_height="65dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue_primary"
            android:drawableTop="@drawable/ic_payment"
            android:text="@string/text_enter_pay"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:textSize="8.6sp" />

        <TextView
            android:id="@+id/text_step4"
            android:layout_width="74dp"
            android:layout_height="65dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue_primary"
            android:drawableTop="@drawable/ic_payment_complete"
            android:text="@string/text_enter_complete"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:textSize="8.6sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_virtual_account"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        app:layout_constraintTop_toBottomOf="@id/step_to_pay">

        <TextView
            android:id="@+id/bca_virtue_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/bca_virtu"
            android:textColor="@color/blue_primary"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_virtual_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/text_virtue_number"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bca_virtue_header" />

        <TextView
            android:id="@+id/virtual_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/virtue_number"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_virtual_number" />

        <TextView
            android:id="@+id/text_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/text_copy"
            android:textColor="@color/blue_primary"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/virtual_number"
            app:layout_constraintTop_toBottomOf="@id/bca_virtue_header" />

        <TextView
            android:id="@+id/text_payment_nominal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/nominal_amount"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/virtual_number"


            />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/text_payment_amount"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_payment_nominal" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/text_copy"
            android:textColor="@color/blue_primary"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/virtual_number"
            app:layout_constraintTop_toBottomOf="@id/bca_virtue_header" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    

    <TextView
        android:id="@+id/text_compliment"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/text_detail_complete_payment"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_virtual_account" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_other_investmenr"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/grid_recycler_home"
        android:backgroundTint="@color/blue_primary"
        android:fontFamily="@font/inter_regular"
        android:text="@string/text_other_invest"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_compliment">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_check_investment"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/grid_recycler_home"
        android:text="@string/text_invest_status"
        android:textAllCaps="false"
        android:textColor="@color/blue_primary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_other_investmenr">

    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>