<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- heeader funraisey -->
    <LinearLayout
        android:id="@+id/header_payment"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@color/blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="18dp"
            android:layout_height="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="21dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/page_payment_screen"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_nominal_amount_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/nominal_amount"
        android:textColor="@color/blue"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_payment" />

    <TextView
        android:id="@+id/text_nominal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/nominal_text"
        android:textColor="@color/desc_box_color"
        android:textFontWeight="700"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_nominal_amount_page" />

    <EditText
        android:id="@+id/box_nominal"
        android:layout_width="340dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/box_rectangle_grey"
        android:hint="@string/hint_text_amount"
        android:paddingLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_nominal" />

    <GridLayout
        android:id="@+id/button_nominal"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_nominal">

        <Button
            android:id="@+id/button_50k"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/inter_regular"
            android:text="@string/fifty"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/button_100k"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="12dp"
            android:text="@string/onehundred"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/button_50k"

            />

        <Button
            android:id="@+id/button_200k"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="10dp"
            android:text="@string/twohundred"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/button_100k" />

        <Button
            android:id="@+id/button_500k"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/inter_regular"
            android:text="@string/fivehundred"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/button_1000k"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="12dp"
            android:text="@string/onemillion"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/button_50k"

            />

        <Button
            android:id="@+id/button_2000k"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="10dp"
            android:text="@string/twomillion"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/button_100k" />


    </GridLayout>

    <TextView
        android:id="@+id/text_payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/payment_metode"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_nominal" />

    <RadioGroup
        android:id="@+id/text_bank_transfer"
        android:layout_width="340dp"
        android:layout_height="152dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/grid_recycler_history"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_payment_method">

        <TextView
            android:id="@+id/bank_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/bank_trans"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:columnCount="2"
            android:orientation="vertical"

            android:rowCount="2">


            <ImageView
                android:id="@+id/logo_bca"
                android:layout_width="40dp"
                android:layout_height="13dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/bcaa"
                />

            <ImageView
                android:id="@+id/logo_mandiri"
                android:layout_width="40dp"
                android:layout_height="13dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/mandiri"
                />


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:fontFamily="@font/inter_regular"
                android:textSize="16sp"

                android:text="@string/bca" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_regular"
                android:textSize="16sp"
                android:text="@string/mandiri" />

        </GridLayout>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>